--- a/Lab 2/lab2_cau1/app/src/main/res/layout/activity_main.xml
+++ b/Lab 2/lab2_cau1/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Nhập tên:"
+        android:background="@color/orange_500"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="20dp"
         tools:layout_editor_absoluteX="20dp"
@@ -44,8 +45,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="hello"
-        android:background="@color/blue_1000"
-        android:textColor="@color/white"
+        android:background="@color/green_700"
         app:layout_constraintTop_toBottomOf="@id/btn_add">
     </TextView>
 
